Added Header and About Me section with flex layout and profile image

--- a/index.html
+++ b/index.html
@@ -7,13 +7,27 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Your Name</h1>
-    <p>Web Developer | Learner | Builder</p>
-  </header>
-  <section id="about">
-    <h2>About Me</h2>
-    <p>This is where you introduce yourself.</p>
-  </section>
+    <header class="hero">
+        <div class="hero-text">
+          <h1>Hi, I'm Vandana 👋</h1>
+          <p>Aspiring Full-Stack Developer | AI Enthusiast | Creative Builder</p>
+          <a href="#projects" class="btn">View My Projects</a>
+        </div>
+      </header>
+      
+      <section id="about" class="about">
+        <h2>About Me</h2>
+        <div class="about-content">
+          <img src="https://via.placeholder.com/200" alt="Profile Photo" class="profile-pic" />
+          <div class="about-text">
+            <p>
+              I'm Vandana, a curious and passionate learner transitioning into web development. I love building interactive, user-friendly apps and exploring AI. This portfolio is my hands-on journey into the full-stack world.
+            </p>
+            <p>
+              My goal is to master frontend & backend technologies by doing — learning HTML, CSS, JavaScript, React, APIs, and deployment through real projects.
+            </p>
+          </div>
+        </div>
+      </section>
 </body>
 </html>
