--- a/index.html
+++ b/index.html
@@ -55,5 +55,21 @@
         </div>
       </section>
       
+      <section id="skills" class="skills">
+        <h2>Skills</h2>
+        <div class="skills-list">
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>JavaScript</span>
+          <span>React</span>
+          <span>Git & GitHub</span>
+          <span>Python</span>
+          <span>SQL</span>
+          <span>Machine Learning</span>
+          <span>Streamlit</span>
+          <span>Azure</span>
+        </div>
+      </section>
+      
 </body>
 </html>
