Added Resume download section with styled button

--- a/index.html
+++ b/index.html
@@ -71,5 +71,12 @@
         </div>
       </section>
       
+      <section id="resume" class="resume">
+        <h2>Resume</h2>
+        <div class="resume-download">
+          <a href="VandanaAnde_Resume.pdf" download class="btn">Download My Resume</a>
+        </div>
+      </section>
+      
 </body>
 </html>
