--- a/index.html
+++ b/index.html
@@ -78,5 +78,16 @@
         </div>
       </section>
       
+      <section id="contact" class="contact">
+        <h2>Contact Me</h2>
+        <form class="contact-form" action="https://formsubmit.co/vandanaande1009@gmail.com" method="POST">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+          <button type="submit" class="btn">Send Message</button>
+        </form>
+      </section>
+      
+
 </body>
 </html>
